sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:19: error: 'while' expected but '}' found.
  } while ( i != getNombreValeurs())
  ^AlgGnomeSort:19: error: ';' expected but 'while' found.
  } while ( i != getNombreValeurs())
    ^AlgGnomeSort:26: error: Unmatched closing brace '}' ignored here
}
^